# CodeBrief

./: .editorconfig  .gitignore  .llmignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_EDITMSG  CONTRIBUTING.md  POA.md  README.md  SECURITY.md  coverage.xml  mkdocs.yml  project_tree.txt  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pages-config.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs-test.yml  publish.yml
docs/: community.md  index.md
docs/development/: contributing.md  infrastructure.md
docs/examples/: bundle-workflows.md  git-workflows.md  python-projects.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/help/: faq.md  support.md  troubleshooting.md
docs/javascripts/: extra.js  mathjax.js
docs/reference/: config_manager.md  flattener.md  main.md  tree_generator.md
docs/reference/tools/: bundler.md  dependency_lister.md  git_provider.md
docs/stylesheets/: extra.css
docs/tutorials/: advanced-workflows.md  basic-usage.md  cicd-integration.md  llm-integration.md
docs/user-guide/: cli-commands.md  cli-usage.md  configuration.md  dependency-analysis.md
scripts/: docs-dev.sh
src/contextcraft/: __init__.py  main.py
src/contextcraft/tools/: bundler.py  dependency_lister.py  flattener.py  git_provider.py  tree_generator.py
src/contextcraft/utils/: config_manager.py  ignore_handler.py
tests/: __init__.py  conftest.py  test_main.py
tests/snapshots/test_main/test_tree_integration_with_config_excludes/: tree_with_config_excludes_output.txt
tests/tools/: test_bundler.py  test_dependency_lister.py  test_flattener.py  test_git_provider.py  test_tree_generator.py
tests/tools/snapshots/test_tree_generator/test_tree_fallback_exclusions_no_llmignore/: tree_fallback.txt
tests/tools/snapshots/test_tree_generator/test_tree_output_to_file_basic/: basic_tree.txt
tests/tools/snapshots/test_tree_generator/test_tree_permission_error_file_output/: tree_permission_error.txt
tests/tools/snapshots/test_tree_generator/test_tree_with_llmignore/: ignored_tree.txt
tests/utils/: test_config_manager.py  test_ignore_handler.py
