# pyproject.toml

[tool.poetry]
name = "contextcraft"
version = "0.1.0"
description = "A CLI toolkit to generate comprehensive project context for LLMs."
authors = ["Your Name <you@example.com>"]
license = "MIT" # Or Apache-2.0
readme = "README.md" # if you have one, or poetry will create a default

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.0.0"
pathspec = "^0.12.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.0.0"
pytest = "^7.0.0"
bandit = "^1.7.0"
pytest-cov = "^4.0.0"
pre-commit = "^4.2.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"
pytest-snapshot = "^0.9.0"
types-toml = "^0.10.8.20240310"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "N", "S"]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src"]  # Changed to a list format
namespace_packages = true  # Added to help with package discovery
strict = true
exclude = ["tests/"]
packages = ["src.contextcraft"]

# Configuration for Pytest (optional, many things are auto-discovered)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/contextcraft --cov-report=term-missing --cov-report=xml" # Ensure xml for CI later
testpaths = [
    "tests",
]
pythonpath = ["src"]

# Configuration for Coverage
[tool.coverage.run]
source = ["src/contextcraft"] # Directory where your source code lives
branch = true

[tool.coverage.report]
# fail_under = 80 # Example: Fail CI if coverage drops below 80%
show_missing = true

[tool.bandit]
# Example: Exclude certain tests if they are too noisy or not applicable.
# Refer to Bandit documentation for available test IDs:
# https://bandit.readthedocs.io/en/latest/plugins/index.html
skips = ["B101"]  # Skip assert_used since we use asserts in tests
exclude_dirs = ["tests"]
# tests = [] # To run only specific tests
# Example: Set confidence level to MEDIUM or HIGH to reduce noise from LOW findings.
# severity = ["MEDIUM", "HIGH"]
# confidence = ["MEDIUM", "HIGH"]

# For now, let's start with a simple config.
# You can specify which directories to scan or exclude here as well.
# By default, it scans all Python files in the repo.
# We'll let pre-commit pass files, but this section is good for global config.
# exclude_dirs = ["tests", "docs"] # If you want to exclude directories globally

# Add a script entry point for your CLI
[tool.poetry.scripts]
contextcraft = "src.contextcraft.main:app"  # Fixed to use correct module path
